hard-gists/211868b4f589428d2626/run.log
=== Docker Run Log for 211868b4f589428d2626 ===
Started at: Mi 29. Okt 12:59:52 CET 2025

[2025-10-29 12:59:52] START: Running container for 211868b4f589428d2626
[2025-10-29 12:59:52] SUCCESS: Container c4a1d6a4028ca9f4a033c37fc65de835aa53c8dc470ef91080479369e4011ca7 started for 211868b4f589428d2626
=== Container logs for 211868b4f589428d2626 ===
  File "/snippet.py", line 37
    print 'Source: %s' % url
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 211868b4f589428d2626 ===
[2025-10-29 12:59:54] INFO: Container c4a1d6a4028ca9f4a033c37fc65de835aa53c8dc470ef91080479369e4011ca7 has stopped
